# analytics

./: README.md  pyproject.toml
notebook/: analytics-amazon.ipynb
scrape/: amazon.py  apple.py  google.py  meta.py  microsoft.py  netflix.py
